--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -1,5 +1,6 @@
-jdbc.driverClassName= com.mysql.jdbc.Driver
-jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
-jdbc.databaseurl=jdbc:mysql://localhost:3306/openUk
-jdbc.username=root
-jdbc.password=root
+
+jdbc.dialect = org.hibernate.dialect.MySQL5Dialect
+jdbc.url = jdbc:mysql://localhost:3306/openUk
+jdbc.username = root
+jdbc.password = root
+jdbc.driver = com.mysql.jdbc.Driver
