--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,24 @@ pip-log.txt
 *.iml
 target/
 src/main/resources/rebel.xml
+target/openUk/WEB-INF/lib/aopalliance-1.0.jar
+
+*.jar
+
+*.jar
+
+target/openUk/WEB-INF/lib/spring-beans-4.1.1.RELEASE.jar
+
+target/openUk/WEB-INF/lib/spring-expression-4.1.1.RELEASE.jar
+
+target/openUk/WEB-INF/lib/spring-core-4.1.1.RELEASE.jar
+
+*.jar
+
+*.jar
+
+.idea/compiler.xml
+
+openUk.iml
+
+.idea/artifacts/openUk_war_exploded.xml
