--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,11 @@
             <artifactId>flyway-core</artifactId>
             <version>3.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.collections</groupId>
+            <artifactId>google-collections</artifactId>
+            <version>1.0</version>
+        </dependency>
 </dependencies>
     <build>
         <plugins>
